# Django-App

./: .env.template  Dockerfile  pyproject.toml
mysite/mysite/: settings.py
