[project]
name = "prod"
version = "0.1.0"
description = ""
authors = [
    {name = "Наталья Столярова",email = "semechkina.n@yandex.ru"}
]
requires-python = ">=3.11"
dependencies = [
    "django (==4.2.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (<21.0)",
    "django-debug-toolbar (<6.1.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
